changed costmap params

--- a/cfg/mouseOdometry.cfg
+++ b/cfg/mouseOdometry.cfg
@@ -3,6 +3,7 @@ PACKAGE = "SenDes"
 import roslib;roslib.load_manifest(PACKAGE)
 
 from dynamic_reconfigure.parameter_generator import *
+from math import pi
 
 gen = ParameterGenerator()
 
@@ -11,8 +12,8 @@ gen = ParameterGenerator()
 #gen.add("str_param", str_t, 0, "A string parameter", "Hello World")
 #gen.add("bool_param", bool_t, 0, "A Boolean parameter", True)
 
-gen.add("linearCalibration", double_t, 0, "Linear calibration", 19000, 0, 30000)
-gen.add("angularCalibration", double_t, 0, "Angular calibration", 19000, 0, 30000)
+gen.add("linearCalibration", double_t, 0, "Linear calibration", 30000, 0, 50000)
+gen.add("angularCalibration", double_t, 0, "Angular calibration", 0, -pi, pi)
 gen.add("radius", double_t, 0, "Base radius", .15, 0, 1)
 
 #size_enum = gen.enum([ gen.const("Small", int_t, 0, "A small constant"),
