--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -1,11 +1,19 @@
 TrajectoryPlannerROS:
+
   max_vel_x: 0.45
-  min_vel_x: 0.1
-  max_rotational_vel: 1.0
-  min_in_place_rotational_vel: 0.4
+  min_vel_x: 0.3
+  max_rotational_vel: 1.57
+  min_in_place_rotational_vel: 0.3
 
   acc_lim_th: 3.2
   acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  acc_lim_y: 0
+
+  controller_frequency: 10
+
+  yaw_goal_tolerance: 1.0
+  xy_goal_tolerance: 0.4
+  latch_xy_goal_tolerance: 0.5
+
 
   holonomic_robot: false
