--- a/global_costmap_params.yaml
+++ b/global_costmap_params.yaml
@@ -2,9 +2,9 @@ global_costmap:
   global_frame: map
   robot_base_frame: base_link
   update_frequency: 5.0
-  static_map: false
-  rolling_window: true
-
+  static_map: true
+  rolling_window: false
+  
   width: 20.0
   height: 20.0
   resolution: 0.05
