--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -1,9 +1,9 @@
 obstacle_range: 2.5
-raytrace_range: 3.0
+raytrace_range: 4.0
 #footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
 robot_radius: 0.30
 inflation_radius: 0.55
 
 observation_sources: kinect
-kinect: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+kinect: {sensor_frame: openni_depth_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
 
