--- a/global_costmap_params.yaml
+++ b/global_costmap_params.yaml
@@ -1,9 +1,9 @@
 global_costmap:
-  global_frame: map
+  global_frame: /map
   robot_base_frame: base_link
   update_frequency: 5.0
-  static_map: true
-  rolling_window: false
+  static_map: false
+  rolling_window: true
   
   width: 20.0
   height: 20.0
