Added perms script and fixed mouse odometry dynamic reconfig stuff

--- a/cfg/mouseOdometry.cfg
+++ b/cfg/mouseOdometry.cfg
@@ -13,7 +13,7 @@ gen = ParameterGenerator()
 #gen.add("bool_param", bool_t, 0, "A Boolean parameter", True)
 
 gen.add("linearCalibration", double_t, 0, "Linear calibration", 30000, 0, 50000)
-gen.add("angularCalibration", double_t, 0, "Angular calibration", 0, -pi, pi)
+gen.add("angularCalibration", double_t, 0, "Angular calibration", 1.2, 0, 5)
 gen.add("radius", double_t, 0, "Base radius", .15, 0, 1)
 
 #size_enum = gen.enum([ gen.const("Small", int_t, 0, "A small constant"),
