--- a/global_costmap_params.yaml
+++ b/global_costmap_params.yaml
@@ -1,9 +1,13 @@
 global_costmap:
-  global_frame: /map
+
+  transform_tolerance: 3.0
+  
+  global_frame: map
   robot_base_frame: base_link
-  update_frequency: 5.0
-  static_map: false
-  rolling_window: true
+  update_frequency: 1.0
+
+  static_map: true
+  rolling_window: false
   
   width: 20.0
   height: 20.0
