--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -1,9 +1,12 @@
-obstacle_range: 2.5
-raytrace_range: 4.0
+
+obstacle_range: 6.0
+raytrace_range: 8.0
 #footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
 robot_radius: 0.30
-inflation_radius: 0.55
+
+inflation_radius: 0.75
 
 observation_sources: kinect
-kinect: {sensor_frame: openni_depth_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
-
+kinect: {data_type: PointCloud2, topic: cloudHoriz, marking: true, clearing: true}
+#kinect: {data_type: LaserScan, topic: scan, marking: true, clearing: true}
+#sonar0: {sensor_frame: /sonar0, data_type: Range, topic: /sonar/sonar0, marking: true, clearing: true}
