--- a/global_costmap_params.yaml
+++ b/global_costmap_params.yaml
@@ -1,14 +1,10 @@
 global_costmap:
 
-  transform_tolerance: 3.0
+  transform_tolerance: 10.0
   
-  global_frame: map
-  robot_base_frame: base_link
-  update_frequency: 1.0
+  global_frame: /map
+  robot_base_frame: /base_link
+  update_frequency: .05
+  publish_frequency: 1
 
   static_map: true
-  rolling_window: false
-  
-  width: 20.0
-  height: 20.0
-  resolution: 0.05
