--- a/local_costmap_params.yaml
+++ b/local_costmap_params.yaml
@@ -1,10 +1,16 @@
 local_costmap:
-  global_frame: odom
-  robot_base_frame: base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
+  transform_tolerance: 2.0
+
+  global_frame: /odom
+  robot_base_frame: /base_link
+  update_frequency: 1.0
+  publish_frequency: .5
+
   static_map: false
   rolling_window: true
-  width: 6.0
-  height: 6.0
+
+  width: 8.0
+  height: 8.0
   resolution: 0.05
+
+
